[gd_scene load_steps=24 format=4 uid="uid://dwcvrli657a23"]

[ext_resource type="Texture2D" uid="uid://bc3datalscahe" path="res://bgs/farthest.png" id="1_qkb7b"]
[ext_resource type="Texture2D" uid="uid://cw0skkipjferr" path="res://bgs/far.png" id="2_iukvc"]
[ext_resource type="Texture2D" uid="uid://h3vnqi0b0xbu" path="res://bgs/mid.png" id="3_wahjx"]
[ext_resource type="Texture2D" uid="uid://c3by4quto6g0v" path="res://bgs/near.png" id="4_f02uh"]
[ext_resource type="Texture2D" uid="uid://c6lvfsr0jnpfj" path="res://bgs/overlay.png" id="5_ntni5"]
[ext_resource type="PackedScene" uid="uid://crppt6mcgws28" path="res://scenes/main/kol/kolFLying.tscn" id="6_7q4o3"]
[ext_resource type="Texture2D" uid="uid://c4hyksx7c8txu" path="res://tiles/spikes.png" id="7_jqoww"]
[ext_resource type="Script" path="res://scripts/main/levels/level 2/kolFlying.gd" id="7_nvcch"]
[ext_resource type="Texture2D" uid="uid://glgn1btyahcj" path="res://icon.svg" id="8_0qc7k"]
[ext_resource type="Script" path="res://scenes/main/levels/level 2/flyingCamera.gd" id="8_7wfw7"]
[ext_resource type="Texture2D" uid="uid://cbdgy6f8iy3b5" path="res://tiles/tm.png" id="9_vg123"]
[ext_resource type="PackedScene" uid="uid://bie6k6h2tlk6n" path="res://scenes/UI/textbox.tscn" id="10_ibf6f"]
[ext_resource type="PackedScene" uid="uid://bn3b3lf76tt65" path="res://scenes/UI/death_screen.tscn" id="22_b5o4v"]
[ext_resource type="Script" path="res://scripts/UI/death_screen.gd" id="23_p7kb4"]
[ext_resource type="AudioStream" uid="uid://dcg6ju0cipyin" path="res://music/have you e ver had a dream that you could when you you when it  - 2_8_25, 1.00 AM.ogg" id="24_wbd2s"]
[ext_resource type="AudioStream" uid="uid://8vrxo1orh0u7" path="res://music/kill me.gov- 2_8_25, 11.46 PM.ogg" id="25_hul36"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pgm3q"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kdf75"]
texture = ExtResource("7_jqoww")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-39.0677, 4.24263, 36.9463, 4.94974, 45.7852, 50, -46.1387, 50)

[sub_resource type="TileSet" id="TileSet_pbcws"]
tile_size = Vector2i(100, 100)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_kdf75")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vrpgm"]
texture = ExtResource("8_0qc7k")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vk4b7"]
texture = ExtResource("9_vg123")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, -24.375, -50, -23.875)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, -24.375, -50, -23.875)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, -24.375, -50, -23.875)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -30.375, -14.875)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 29.375, -12.375, -50, 50, -50, -26.875)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 36.625, -13.125, 1.375, 43.375, -40.125, -19.625)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -30.375, -14.875)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 36.625, -13.125, 1.375, 43.375, -40.125, -19.625)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 36.625, -13.125, 1.375, 43.375, -40.125, -19.625)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 36.625, -13.125, 1.375, 43.375, -40.125, -19.625)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 29.375, -12.375, -50, 50, -50, -26.875)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
2:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hg0w7"]
texture = ExtResource("7_jqoww")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-42.125, 1.375, 40.625, 0.625, 50, 50, -50, 50)

[sub_resource type="TileSet" id="TileSet_u3xhy"]
tile_size = Vector2i(100, 100)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vrpgm")
sources/2 = SubResource("TileSetAtlasSource_vk4b7")
sources/4 = SubResource("TileSetAtlasSource_hg0w7")

[node name="Node2D" type="Node2D"]

[node name="BG" type="ParallaxBackground" parent="."]

[node name="Farthest_BG" type="ParallaxLayer" parent="BG"]
position = Vector2(0, 2000)
motion_scale = Vector2(0, 0)
motion_offset = Vector2(0, 1000)
motion_mirroring = Vector2(6000, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/Farthest_BG"]
texture = ExtResource("1_qkb7b")

[node name="Far_BG" type="ParallaxLayer" parent="BG"]
position = Vector2(0, 3000)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(6000, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/Far_BG"]
position = Vector2(-25, -287)
texture = ExtResource("2_iukvc")

[node name="Mid_BG" type="ParallaxLayer" parent="BG"]
position = Vector2(0, 3000)
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(6000, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/Mid_BG"]
position = Vector2(-25, -287)
texture = ExtResource("3_wahjx")

[node name="Near_BG" type="ParallaxLayer" parent="BG"]
position = Vector2(0, 3000)
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(6000, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/Near_BG"]
position = Vector2(-25, -287)
texture = ExtResource("4_f02uh")

[node name="Sprite2D2" type="Sprite2D" parent="BG/Near_BG"]
visible = false
modulate = Color(1, 1, 1, 0.184314)
self_modulate = Color(1, 1, 1, 0.572549)
material = SubResource("CanvasItemMaterial_pgm3q")
position = Vector2(-25, -287)
texture = ExtResource("5_ntni5")

[node name="Camera2D2" type="Camera2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(990, 873)
rotation = -3.14159
script = ExtResource("8_7wfw7")
player = NodePath("../Flying Kol")

[node name="SpikeLayer2" type="TileMapLayer" parent="Camera2D2"]
position = Vector2(990.002, 872.997)
rotation = 3.14159
tile_map_data = PackedByteArray("AAD//wMAAAAAAAAAAFD//wQAAAAAAAAAAFD//wUAAAAAAAAAAFD//wYAAAAAAAAAAFD//wcAAAAAAAAAAFD//wgAAAAAAAAAAFD//wkAAAAAAAAAAFD//woAAAAAAAAAAFD//wsAAAAAAAAAAFD//wwAAAAAAAAAAFD//w0AAAAAAAAAAFAVAAYAAAAAAAAAAGAUAAMAAAAAAAAAAGAUAAQAAAAAAAAAAGAUAAUAAAAAAAAAAGAUAAYAAAAAAAAAAGAUAAcAAAAAAAAAAGAUAAgAAAAAAAAAAGAUAAkAAAAAAAAAAGAUAAoAAAAAAAAAAGAUAAsAAAAAAAAAAGAUAAwAAAAAAAAAAGAUAA0AAAAAAAAAAGA=")
tile_set = SubResource("TileSet_pbcws")

[node name="Flying Kol" parent="." instance=ExtResource("6_7q4o3")]
position = Vector2(1242, 252)
rotation = 1.5708
script = ExtResource("7_nvcch")

[node name="SpikeLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAP3/AAAAAAAAADATAP3/AAAAAAAAADAUAP3/AAAAAAAAADAVAP3/AAAAAAAAADAWAP3/AAAAAAAAADAXAP3/AAAAAAAAADAYAP3/AAAAAAAAADAZAP3/AAAAAAAAADAaAP3/AAAAAAAAADAbAP3/AAAAAAAAADAcAP3/AAAAAAAAADAdAP3/AAAAAAAAADASAAcAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAAcAAAAAAAAAAAAXAAcAAAAAAAAAAAAYAAcAAAAAAAAAAAAZAAcAAAAAAAAAAAAaAAcAAAAAAAAAAAAbAAcAAAAAAAAAAAAcAAcAAAAAAAAAAAAdAAcAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_pbcws")

[node name="PlatformLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAVAAgAAgAAAAAAAAAUAAgAAgAAAAAAAAATAAgAAgAAAAAAAAASAAgAAgAAAAAAAAARAAgAAgAAAAAAAAAQAAgAAgAAAAAAAAAPAAgAAgAAAAAAAAAOAAgAAgAAAAAAAAANAAgAAgAAAAAAAAAMAAgAAgAAAAAAAAALAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAAIAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAGAAgAAgAAAAAAAAAFAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAADAAgAAgAAAAAAAAACAAgAAgAAAAAAAAABAAgAAgAAAAAAAAAVAPz/AgAAAAAAAAAUAPz/AgAAAAAAAAATAPz/AgAAAAAAAAATAPv/AgAAAAAAAAASAPv/AgAAAAAAAAARAPv/AgAAAAAAAAAQAPv/AgAAAAAAAAAPAPv/AgAAAAAAAAASAPz/AgAAAAAAAAARAPz/AgAAAAAAAAAQAPz/AgAAAAAAAAAPAPz/AgAAAAAAAAAOAPz/AgAAAAAAAAANAPz/AgAAAAAAAAAMAPz/AgAAAAAAAAALAPz/AgAAAAAAAAAKAPz/AgAAAAAAAAAJAPz/AgAAAAAAAAAIAPz/AgAAAAAAAAAIAPv/AgAAAAAAAAAHAPv/AgAAAAAAAAAGAPv/AgAAAAAAAAAFAPv/AgAAAAAAAAAEAPv/AgAAAAAAAAAEAPz/AgAAAAAAAAADAPz/AgAAAAAAAAAFAPz/AgAAAAAAAAAGAPz/AgAAAAAAAAAHAPz/AgAAAAAAAAAWAPz/AgAAAAEAAAAXAPz/AgAAAAEAAAAYAPz/AgAAAAEAAAAZAPz/AgAAAAEAAAAaAPz/AgAAAAEAAAAbAPz/AgAAAAEAAAAcAPz/AgAAAAEAAAAdAPz/AgAAAAEAAAAeAPz/AgAAAAEAAAAfAPz/AgAAAAEAAAAgAPz/AgAAAAEAAAAhAPz/AgAAAAEAAAAiAPz/AgAAAAEAAAAjAPz/AgAAAAEAAAAkAPz/AgAAAAEAAAAlAPz/AgAAAAEAAAAmAPz/AgAAAAEAAAAnAPz/AgAAAAEAAAAoAPz/AgAAAAEAAAApAPz/AgAAAAEAAAAqAPz/AgAAAAEAAAArAPz/AgAAAAEAAAAsAPz/AgAAAAEAAAAtAPz/AgAAAAEAAAAuAPz/AgAAAAEAAAAvAPz/AgAAAAEAAAAwAPz/AgAAAAEAAAAxAPz/AgAAAAEAAAAyAPz/AgAAAAEAAAAzAPz/AgAAAAEAAAA0APz/AgAAAAEAAAA1APz/AgAAAAEAAAA2APz/AgAAAAEAAAA3APz/AgAAAAEAAAA4APz/AgAAAAEAAAA5APz/AgAAAAEAAAA6APz/AgAAAAEAAAAWAAgAAgAAAAEAAAAXAAgAAgAAAAEAAAAYAAgAAgAAAAEAAAAZAAgAAgAAAAEAAAAaAAgAAgAAAAEAAAAbAAgAAgAAAAEAAAAcAAgAAgAAAAEAAAAdAAgAAgAAAAEAAAAeAAgAAgAAAAEAAAAfAAgAAgAAAAEAAAAgAAgAAgAAAAEAAAAhAAgAAgAAAAEAAAAiAAgAAgAAAAEAAAAjAAgAAgAAAAEAAAAkAAgAAgAAAAEAAAAlAAgAAgAAAAEAAAAmAAgAAgAAAAEAAAAnAAgAAgAAAAEAAAAoAAgAAgAAAAEAAAApAAgAAgAAAAEAAAAqAAgAAgAAAAEAAAArAAgAAgAAAAEAAAAsAAgAAgAAAAEAAAAtAAgAAgAAAAEAAAAuAAgAAgAAAAEAAAAvAAgAAgAAAAEAAAAwAAgAAgAAAAEAAAAxAAgAAgAAAAEAAAAyAAgAAgAAAAEAAAAzAAgAAgAAAAEAAAA0AAgAAgAAAAEAAAA1AAgAAgAAAAEAAAA2AAgAAgAAAAEAAAA3AAgAAgAAAAEAAAA4AAgAAgAAAAEAAAA5AAgAAgAAAAEAAAA6AAgAAgAAAAEAAAA7AAgAAgAAAAEAAAA8AAgAAgAAAAEAAAA9AAgAAgAAAAEAAAA+AAgAAgAAAAEAAAA/AAgAAgAAAAEAAABAAAgAAgAAAAEAAABBAAgAAgAAAAEAAABCAAgAAgAAAAEAAABDAAgAAgAAAAEAAABEAAgAAgAAAAEAAABFAAgAAgAAAAEAAAA7APz/AgAAAAEAAAA8APz/AgAAAAEAAAA9APz/AgAAAAEAAAA+APz/AgAAAAEAAAA/APz/AgAAAAEAAABAAPz/AgAAAAEAAABBAPz/AgAAAAEAAABCAPz/AgAAAAEAAABDAPz/AgAAAAEAAABEAPz/AgAAAAEAAABFAPz/AgAAAAEAAABGAPz/AgAAAAEAAABHAPz/AgAAAAEAAABIAPz/AgAAAAEAAABJAPz/AgAAAAEAAABKAPz/AgAAAAEAAABLAPz/AgAAAAEAAABMAPz/AgAAAAEAAABNAPz/AgAAAAEAAABOAPz/AgAAAAEAAABPAPz/AgAAAAEAAABQAPz/AgAAAAEAAABRAPz/AgAAAAEAAABSAPz/AgAAAAEAAABTAPz/AgAAAAEAAABUAPz/AgAAAAEAAABVAPz/AgAAAAEAAABWAPz/AgAAAAEAAABXAPz/AgAAAAEAAABYAPz/AgAAAAEAAABZAPz/AgAAAAEAAABaAPz/AgAAAAEAAABbAPz/AgAAAAEAAABcAPz/AgAAAAEAAABdAPz/AgAAAAEAAABeAPz/AgAAAAEAAABfAPz/AgAAAAEAAABgAPz/AgAAAAEAAABhAPz/AgAAAAEAAABiAPz/AgAAAAEAAABjAPz/AgAAAAEAAABkAPz/AgAAAAEAAABlAPz/AgAAAAEAAABmAPz/AgAAAAEAAABnAPz/AgAAAAEAAABoAPz/AgAAAAEAAABpAPz/AgAAAAEAAABqAPz/AgAAAAEAAABrAPz/AgAAAAEAAABsAPz/AgAAAAEAAABtAPz/AgAAAAEAAABuAPz/AgAAAAEAAABvAPz/AgAAAAEAAABwAPz/AgAAAAEAAABxAPz/AgAAAAEAAAByAPz/AgAAAAEAAABzAPz/AgAAAAEAAAB0APz/AgAAAAEAAAB1APz/AgAAAAEAAAB2APz/AgAAAAEAAAB3APz/AgAAAAEAAAB4APz/AgAAAAEAAAB5APz/AgAAAAEAAAB6APz/AgAAAAEAAAB7APz/AgAAAAEAAAB8APz/AgAAAAEAAAB9APz/AgAAAAEAAAB+APz/AgAAAAEAAAB/APz/AgAAAAEAAACAAPz/AgAAAAEAAACBAPz/AgAAAAEAAACCAPz/AgAAAAEAAACDAPz/AgAAAAEAAACEAPz/AgAAAAEAAACFAPz/AgAAAAEAAACGAPz/AgAAAAEAAACHAPz/AgAAAAEAAACIAPz/AgAAAAEAAACJAPz/AgAAAAEAAACKAPz/AgAAAAEAAACLAPz/AgAAAAEAAACMAPz/AgAAAAEAAACNAPz/AgAAAAEAAACOAPz/AgAAAAEAAACPAPz/AgAAAAEAAACQAPz/AgAAAAEAAACRAPz/AgAAAAEAAACSAPz/AgAAAAEAAACTAPz/AgAAAAEAAACUAPz/AgAAAAEAAACVAPz/AgAAAAEAAACWAPz/AgAAAAEAAACXAPz/AgAAAAEAAACYAPz/AgAAAAEAAACZAPz/AgAAAAEAAACaAPz/AgAAAAEAAABGAAgAAgAAAAEAAABHAAgAAgAAAAEAAABIAAgAAgAAAAEAAABJAAgAAgAAAAEAAABKAAgAAgAAAAEAAABLAAgAAgAAAAEAAABMAAgAAgAAAAEAAABNAAgAAgAAAAEAAABOAAgAAgAAAAEAAABPAAgAAgAAAAEAAABQAAgAAgAAAAEAAABRAAgAAgAAAAEAAABSAAgAAgAAAAEAAABTAAgAAgAAAAEAAABUAAgAAgAAAAEAAABVAAgAAgAAAAEAAABWAAgAAgAAAAEAAABXAAgAAgAAAAEAAABYAAgAAgAAAAEAAABZAAgAAgAAAAEAAABaAAgAAgAAAAEAAABbAAgAAgAAAAEAAABcAAgAAgAAAAEAAABdAAgAAgAAAAEAAABeAAgAAgAAAAEAAABfAAgAAgAAAAEAAABgAAgAAgAAAAEAAABhAAgAAgAAAAEAAABiAAgAAgAAAAEAAABjAAgAAgAAAAEAAABkAAgAAgAAAAEAAABlAAgAAgAAAAEAAABmAAgAAgAAAAEAAABnAAgAAgAAAAEAAABoAAgAAgAAAAEAAABpAAgAAgAAAAEAAABqAAgAAgAAAAEAAABrAAgAAgAAAAEAAABsAAgAAgAAAAEAAABtAAgAAgAAAAEAAABuAAgAAgAAAAEAAABvAAgAAgAAAAEAAABwAAgAAgAAAAEAAABxAAgAAgAAAAEAAAByAAgAAgAAAAEAAABzAAgAAgAAAAEAAAB0AAgAAgAAAAEAAAB1AAgAAgAAAAEAAAB2AAgAAgAAAAEAAAB3AAgAAgAAAAEAAAB4AAgAAgAAAAEAAAB5AAgAAgAAAAEAAAB6AAgAAgAAAAEAAAB7AAgAAgAAAAEAAAB8AAgAAgAAAAEAAAB9AAgAAgAAAAEAAAB+AAgAAgAAAAEAAAB/AAgAAgAAAAEAAACAAAgAAgAAAAEAAACBAAgAAgAAAAEAAACCAAgAAgAAAAEAAACDAAgAAgAAAAEAAACEAAgAAgAAAAEAAACFAAgAAgAAAAEAAACGAAgAAgAAAAEAAACHAAgAAgAAAAEAAACIAAgAAgAAAAEAAACJAAgAAgAAAAEAAACKAAgAAgAAAAEAAACLAAgAAgAAAAEAAACMAAgAAgAAAAEAAACNAAgAAgAAAAEAAACOAAgAAgAAAAEAAACPAAgAAgAAAAEAAACQAAgAAgAAAAEAAACRAAgAAgAAAAEAAACSAAgAAgAAAAEAAACTAAgAAgAAAAEAAACUAAgAAgAAAAEAAACVAAgAAgAAAAEAAACWAAgAAgAAAAEAAACXAAgAAgAAAAEAAACYAAgAAgAAAAEAAACZAAgAAgAAAAEAAACaAAgAAgAAAAEAAACbAAgAAgAAAAEAAACcAAgAAgAAAAEAAACdAAgAAgAAAAEAAACeAAgAAgAAAAEAAACfAAgAAgAAAAEAAACbAPz/AgAAAAEAAACcAPz/AgAAAAEAAACdAPz/AgAAAAEAAACeAPz/AgAAAAEAAACfAPz/AgAAAAEAAACgAPz/AgAAAAEAAAChAPz/AgAAAAEAAACiAPz/AgAAAAEAAACjAPz/AgAAAAEAAACkAPz/AgAAAAEAAAClAPz/AgAAAAEAAACmAPz/AgAAAAEAAACnAPz/AgAAAAEAAACoAPz/AgAAAAEAAACpAPz/AgAAAAEAAACqAPz/AgAAAAEAAACrAPz/AgAAAAEAAACsAPz/AgAAAAEAAACtAPz/AgAAAAEAAACuAPz/AgAAAAEAAACvAPz/AgAAAAEAAACwAPz/AgAAAAEAAACxAPz/AgAAAAEAAACyAPz/AgAAAAEAAACzAPz/AgAAAAEAAAC0APz/AgAAAAEAAAC1APz/AgAAAAEAAAC2APz/AgAAAAEAAAC3APz/AgAAAAEAAAC4APz/AgAAAAEAAAC5APz/AgAAAAEAAAC6APz/AgAAAAEAAAC7APz/AgAAAAEAAAC8APz/AgAAAAEAAAC9APz/AgAAAAEAAAC+APz/AgAAAAEAAAC/APz/AgAAAAEAAADAAPz/AgAAAAEAAADBAPz/AgAAAAEAAADCAPz/AgAAAAEAAADDAPz/AgAAAAEAAADEAPz/AgAAAAEAAADFAPz/AgAAAAEAAADGAPz/AgAAAAEAAADHAPz/AgAAAAEAAADIAPz/AgAAAAEAAADJAPz/AgAAAAEAAADKAPz/AgAAAAEAAADLAPz/AgAAAAEAAADMAPz/AgAAAAEAAADNAPz/AgAAAAEAAADOAPz/AgAAAAEAAADPAPz/AgAAAAEAAADQAPz/AgAAAAEAAADRAPz/AgAAAAEAAADSAPz/AgAAAAEAAADTAPz/AgAAAAEAAADUAPz/AgAAAAEAAADVAPz/AgAAAAEAAADWAPz/AgAAAAEAAADXAPz/AgAAAAEAAADYAPz/AgAAAAEAAADZAPz/AgAAAAEAAADaAPz/AgAAAAEAAADbAPz/AgAAAAEAAADcAPz/AgAAAAEAAADdAPz/AgAAAAEAAADeAPz/AgAAAAEAAADfAPz/AgAAAAEAAADgAPz/AgAAAAEAAADhAPz/AgAAAAEAAADiAPz/AgAAAAEAAADjAPz/AgAAAAEAAADkAPz/AgAAAAEAAADlAPz/AgAAAAEAAADmAPz/AgAAAAEAAADnAPz/AgAAAAEAAADoAPz/AgAAAAEAAADpAPz/AgAAAAEAAADqAPz/AgAAAAEAAADrAPz/AgAAAAEAAADsAPz/AgAAAAEAAADtAPz/AgAAAAEAAADuAPz/AgAAAAEAAADvAPz/AgAAAAEAAADwAPz/AgAAAAEAAADxAPz/AgAAAAEAAADyAPz/AgAAAAEAAADzAPz/AgAAAAEAAAD0APz/AgAAAAEAAAD1APz/AgAAAAEAAAD2APz/AgAAAAEAAAD3APz/AgAAAAEAAAD4APz/AgAAAAEAAAD5APz/AgAAAAEAAAD6APz/AgAAAAEAAAD7APz/AgAAAAEAAAD8APz/AgAAAAEAAAD9APz/AgAAAAEAAAD+APz/AgAAAAEAAAD/APz/AgAAAAEAAAAAAfz/AgAAAAEAAAABAfz/AgAAAAEAAAACAfz/AgAAAAEAAAADAfz/AgAAAAEAAAAEAfz/AgAAAAEAAAAFAfz/AgAAAAEAAAAGAfz/AgAAAAEAAAAHAfz/AgAAAAEAAAAIAfz/AgAAAAEAAAAJAfz/AgAAAAEAAAAKAfz/AgAAAAEAAAALAfz/AgAAAAEAAAAMAfz/AgAAAAEAAAANAfz/AgAAAAEAAAAOAfz/AgAAAAEAAAAPAfz/AgAAAAEAAAAQAfz/AgAAAAEAAAARAfz/AgAAAAEAAAASAfz/AgAAAAEAAAATAfz/AgAAAAEAAAAUAfz/AgAAAAEAAAAVAfz/AgAAAAEAAAAWAfz/AgAAAAEAAAAXAfz/AgAAAAEAAAAYAfz/AgAAAAEAAAAZAfz/AgAAAAEAAAAaAfz/AgAAAAEAAAAbAfz/AgAAAAEAAAAcAfz/AgAAAAEAAAAdAfz/AgAAAAEAAAAeAfz/AgAAAAEAAAAfAfz/AgAAAAEAAAAgAfz/AgAAAAEAAAAhAfz/AgAAAAEAAAAiAfz/AgAAAAEAAAAjAfz/AgAAAAEAAAAkAfz/AgAAAAEAAAAlAfz/AgAAAAEAAAAmAfz/AgAAAAEAAAAnAfz/AgAAAAEAAAAoAfz/AgAAAAEAAAApAfz/AgAAAAEAAAAqAfz/AgAAAAEAAAArAfz/AgAAAAEAAAAsAfz/AgAAAAEAAAAtAfz/AgAAAAEAAAAuAfz/AgAAAAEAAAAvAfz/AgAAAAEAAAAwAfz/AgAAAAEAAAAxAfz/AgAAAAEAAAAyAfz/AgAAAAEAAAAzAfz/AgAAAAEAAAA0Afz/AgAAAAEAAAA1Afz/AgAAAAEAAAA2Afz/AgAAAAEAAAA3Afz/AgAAAAEAAAA4Afz/AgAAAAEAAAA5Afz/AgAAAAEAAAA6Afz/AgAAAAEAAAA7Afz/AgAAAAEAAAA8Afz/AgAAAAEAAAA9Afz/AgAAAAEAAAA+Afz/AgAAAAEAAAA/Afz/AgAAAAEAAABAAfz/AgAAAAEAAABBAfz/AgAAAAEAAABCAfz/AgAAAAEAAABDAfz/AgAAAAEAAABEAfz/AgAAAAEAAABFAfz/AgAAAAEAAABGAfz/AgAAAAEAAABHAfz/AgAAAAEAAABIAfz/AgAAAAEAAABJAfz/AgAAAAEAAABKAfz/AgAAAAEAAABLAfz/AgAAAAEAAABMAfz/AgAAAAEAAABNAfz/AgAAAAEAAABOAfz/AgAAAAEAAABPAfz/AgAAAAEAAABQAfz/AgAAAAEAAABRAfz/AgAAAAEAAABSAfz/AgAAAAEAAABTAfz/AgAAAAEAAABUAfz/AgAAAAEAAABVAfz/AgAAAAEAAABWAfz/AgAAAAEAAABXAfz/AgAAAAEAAABYAfz/AgAAAAEAAABZAfz/AgAAAAEAAABaAfz/AgAAAAEAAABbAfz/AgAAAAEAAABcAfz/AgAAAAEAAABdAfz/AgAAAAEAAABeAfz/AgAAAAEAAABfAfz/AgAAAAEAAABgAfz/AgAAAAEAAABhAfz/AgAAAAEAAABiAfz/AgAAAAEAAABjAfz/AgAAAAEAAABkAfz/AgAAAAEAAABlAfz/AgAAAAEAAABmAfz/AgAAAAEAAABnAfz/AgAAAAEAAABoAfz/AgAAAAEAAABpAfz/AgAAAAEAAABqAfz/AgAAAAEAAABrAfz/AgAAAAEAAABsAfz/AgAAAAEAAABtAfz/AgAAAAEAAABuAfz/AgAAAAEAAABvAfz/AgAAAAEAAABwAfz/AgAAAAEAAABxAfz/AgAAAAEAAAByAfz/AgAAAAEAAABzAfz/AgAAAAEAAAB0Afz/AgAAAAEAAAB1Afz/AgAAAAEAAAB2Afz/AgAAAAEAAAB3Afz/AgAAAAEAAAB4Afz/AgAAAAEAAAB5Afz/AgAAAAEAAAB6Afz/AgAAAAEAAAB7Afz/AgAAAAEAAAB8Afz/AgAAAAEAAAB9Afz/AgAAAAEAAAB+Afz/AgAAAAEAAAB/Afz/AgAAAAEAAACAAfz/AgAAAAEAAACBAfz/AgAAAAEAAACCAfz/AgAAAAEAAACDAfz/AgAAAAEAAACEAfz/AgAAAAEAAACFAfz/AgAAAAEAAACGAfz/AgAAAAEAAACHAfz/AgAAAAEAAACIAfz/AgAAAAEAAACJAfz/AgAAAAEAAACKAfz/AgAAAAEAAACLAfz/AgAAAAEAAACMAfz/AgAAAAEAAACNAfz/AgAAAAEAAACOAfz/AgAAAAEAAACPAfz/AgAAAAEAAACQAfz/AgAAAAEAAACRAfz/AgAAAAEAAACSAfz/AgAAAAEAAACTAfz/AgAAAAEAAACUAfz/AgAAAAEAAACVAfz/AgAAAAEAAACWAfz/AgAAAAEAAACXAfz/AgAAAAEAAACYAfz/AgAAAAEAAACgAAgAAgAAAAEAAAChAAgAAgAAAAEAAACiAAgAAgAAAAEAAACjAAgAAgAAAAEAAACkAAgAAgAAAAEAAAClAAgAAgAAAAEAAACmAAgAAgAAAAEAAACnAAgAAgAAAAEAAACoAAgAAgAAAAEAAACpAAgAAgAAAAEAAACqAAgAAgAAAAEAAACrAAgAAgAAAAEAAACsAAgAAgAAAAEAAACtAAgAAgAAAAEAAACuAAgAAgAAAAEAAACvAAgAAgAAAAEAAACwAAgAAgAAAAEAAACxAAgAAgAAAAEAAACyAAgAAgAAAAEAAACzAAgAAgAAAAEAAAC0AAgAAgAAAAEAAAC1AAgAAgAAAAEAAAC2AAgAAgAAAAEAAAC3AAgAAgAAAAEAAAC4AAgAAgAAAAEAAAC5AAgAAgAAAAEAAAC6AAgAAgAAAAEAAAC7AAgAAgAAAAEAAAC8AAgAAgAAAAEAAAC9AAgAAgAAAAEAAAC+AAgAAgAAAAEAAAC/AAgAAgAAAAEAAADAAAgAAgAAAAEAAADBAAgAAgAAAAEAAADCAAgAAgAAAAEAAADDAAgAAgAAAAEAAADEAAgAAgAAAAEAAADFAAgAAgAAAAEAAADGAAgAAgAAAAEAAADHAAgAAgAAAAEAAADIAAgAAgAAAAEAAADJAAgAAgAAAAEAAADKAAgAAgAAAAEAAADLAAgAAgAAAAEAAADMAAgAAgAAAAEAAADNAAgAAgAAAAEAAADOAAgAAgAAAAEAAADPAAgAAgAAAAEAAADQAAgAAgAAAAEAAADRAAgAAgAAAAEAAADSAAgAAgAAAAEAAADTAAgAAgAAAAEAAADUAAgAAgAAAAEAAADVAAgAAgAAAAEAAADWAAgAAgAAAAEAAADXAAgAAgAAAAEAAADYAAgAAgAAAAEAAADZAAgAAgAAAAEAAADaAAgAAgAAAAEAAADbAAgAAgAAAAEAAADcAAgAAgAAAAEAAADdAAgAAgAAAAEAAADeAAgAAgAAAAEAAADfAAgAAgAAAAEAAADgAAgAAgAAAAEAAADhAAgAAgAAAAEAAADiAAgAAgAAAAEAAADjAAgAAgAAAAEAAADkAAgAAgAAAAEAAADlAAgAAgAAAAEAAADmAAgAAgAAAAEAAADnAAgAAgAAAAEAAADoAAgAAgAAAAEAAADpAAgAAgAAAAEAAADqAAgAAgAAAAEAAADrAAgAAgAAAAEAAADsAAgAAgAAAAEAAADtAAgAAgAAAAEAAADuAAgAAgAAAAEAAADvAAgAAgAAAAEAAADwAAgAAgAAAAEAAADxAAgAAgAAAAEAAADyAAgAAgAAAAEAAADzAAgAAgAAAAEAAAD0AAgAAgAAAAEAAAD1AAgAAgAAAAEAAAD2AAgAAgAAAAEAAAD3AAgAAgAAAAEAAAD4AAgAAgAAAAEAAAD5AAgAAgAAAAEAAAD6AAgAAgAAAAEAAAD7AAgAAgAAAAEAAAD8AAgAAgAAAAEAAAD9AAgAAgAAAAEAAAD+AAgAAgAAAAEAAAD/AAgAAgAAAAEAAAAAAQgAAgAAAAEAAAABAQgAAgAAAAEAAAACAQgAAgAAAAEAAAADAQgAAgAAAAEAAAAEAQgAAgAAAAEAAAAFAQgAAgAAAAEAAAAGAQgAAgAAAAEAAAAHAQgAAgAAAAEAAAAIAQgAAgAAAAEAAAAJAQgAAgAAAAEAAAAKAQgAAgAAAAEAAAALAQgAAgAAAAEAAAAMAQgAAgAAAAEAAAANAQgAAgAAAAEAAAAOAQgAAgAAAAEAAAAPAQgAAgAAAAEAAAAQAQgAAgAAAAEAAAARAQgAAgAAAAEAAAASAQgAAgAAAAEAAAATAQgAAgAAAAEAAAAUAQgAAgAAAAEAAAAVAQgAAgAAAAEAAAAWAQgAAgAAAAEAAAAXAQgAAgAAAAEAAAAYAQgAAgAAAAEAAAAZAQgAAgAAAAEAAAAaAQgAAgAAAAEAAAAbAQgAAgAAAAEAAAAcAQgAAgAAAAEAAAAdAQgAAgAAAAEAAAAeAQgAAgAAAAEAAAAfAQgAAgAAAAEAAAAgAQgAAgAAAAEAAAAhAQgAAgAAAAEAAAAiAQgAAgAAAAEAAAAjAQgAAgAAAAEAAAAkAQgAAgAAAAEAAAAlAQgAAgAAAAEAAAAmAQgAAgAAAAEAAAAnAQgAAgAAAAEAAAAoAQgAAgAAAAEAAAApAQgAAgAAAAEAAAAqAQgAAgAAAAEAAAArAQgAAgAAAAEAAAAsAQgAAgAAAAEAAAAtAQgAAgAAAAEAAAAuAQgAAgAAAAEAAAAvAQgAAgAAAAEAAAAwAQgAAgAAAAEAAAAxAQgAAgAAAAEAAAAyAQgAAgAAAAEAAAAzAQgAAgAAAAEAAAA0AQgAAgAAAAEAAAA1AQgAAgAAAAEAAAA2AQgAAgAAAAEAAAA3AQgAAgAAAAEAAAA4AQgAAgAAAAEAAAA5AQgAAgAAAAEAAAA6AQgAAgAAAAEAAAA7AQgAAgAAAAEAAAA8AQgAAgAAAAEAAAA9AQgAAgAAAAEAAAA+AQgAAgAAAAEAAAA/AQgAAgAAAAEAAABAAQgAAgAAAAEAAABBAQgAAgAAAAEAAABCAQgAAgAAAAEAAABDAQgAAgAAAAEAAABEAQgAAgAAAAEAAABFAQgAAgAAAAEAAABGAQgAAgAAAAEAAABHAQgAAgAAAAEAAABIAQgAAgAAAAEAAABJAQgAAgAAAAEAAABKAQgAAgAAAAEAAABLAQgAAgAAAAEAAABMAQgAAgAAAAEAAABNAQgAAgAAAAEAAABOAQgAAgAAAAEAAABPAQgAAgAAAAEAAABQAQgAAgAAAAEAAABRAQgAAgAAAAEAAABSAQgAAgAAAAEAAABTAQgAAgAAAAEAAABUAQgAAgAAAAEAAABVAQgAAgAAAAEAAABWAQgAAgAAAAEAAABXAQgAAgAAAAEAAABYAQgAAgAAAAEAAABZAQgAAgAAAAEAAABaAQgAAgAAAAEAAABbAQgAAgAAAAEAAABcAQgAAgAAAAEAAABdAQgAAgAAAAEAAABeAQgAAgAAAAEAAABfAQgAAgAAAAEAAABgAQgAAgAAAAEAAABhAQgAAgAAAAEAAABiAQgAAgAAAAEAAABjAQgAAgAAAAEAAABkAQgAAgAAAAEAAABlAQgAAgAAAAEAAABmAQgAAgAAAAEAAABnAQgAAgAAAAEAAABoAQgAAgAAAAEAAABpAQgAAgAAAAEAAABqAQgAAgAAAAEAAABrAQgAAgAAAAEAAABsAQgAAgAAAAEAAABtAQgAAgAAAAEAAABuAQgAAgAAAAEAAABvAQgAAgAAAAEAAABwAQgAAgAAAAEAAABxAQgAAgAAAAEAAAByAQgAAgAAAAEAAABzAQgAAgAAAAEAAAB0AQgAAgAAAAEAAAB1AQgAAgAAAAEAAAB2AQgAAgAAAAEAAAB3AQgAAgAAAAEAAAB4AQgAAgAAAAEAAAB5AQgAAgAAAAEAAAB6AQgAAgAAAAEAAAB7AQgAAgAAAAEAAAB8AQgAAgAAAAEAAAB9AQgAAgAAAAEAAAB+AQgAAgAAAAEAAAB/AQgAAgAAAAEAAACAAQgAAgAAAAEAAACBAQgAAgAAAAEAAACCAQgAAgAAAAEAAACDAQgAAgAAAAEAAACEAQgAAgAAAAEAAACFAQgAAgAAAAEAAACGAQgAAgAAAAEAAACHAQgAAgAAAAEAAACIAQgAAgAAAAEAAACJAQgAAgAAAAEAAACKAQgAAgAAAAEAAACLAQgAAgAAAAEAAACMAQgAAgAAAAEAAACNAQgAAgAAAAEAAACOAQgAAgAAAAEAAACPAQgAAgAAAAEAAACQAQgAAgAAAAEAAACRAQgAAgAAAAEAAACSAQgAAgAAAAEAAACTAQgAAgAAAAEAAACUAQgAAgAAAAEAAACVAQgAAgAAAAEAAACWAQgAAgAAAAEAAACXAQgAAgAAAAEAAACYAQgAAgAAAAEAAACZAQgAAgAAAAEAAACaAQgAAgAAAAEAAACbAQgAAgAAAAEAAACcAQgAAgAAAAEAAACdAQgAAgAAAAEAAACeAQgAAgAAAAEAAACfAQgAAgAAAAEAAACgAQgAAgAAAAEAAAChAQgAAgAAAAEAAACiAQgAAgAAAAEAAACjAQgAAgAAAAEAAACkAQgAAgAAAAEAAAClAQgAAgAAAAEAAACmAQgAAgAAAAEAAACnAQgAAgAAAAEAAACoAQgAAgAAAAEAAACpAQgAAgAAAAEAAACqAQgAAgAAAAEAAACrAQgAAgAAAAEAAACsAQgAAgAAAAEAAACtAQgAAgAAAAEAAACuAQgAAgAAAAEAAACvAQgAAgAAAAEAAACwAQgAAgAAAAEAAACxAQgAAgAAAAEAAAAeAAcAAgABAAAAAGAeAAYAAgABAAAAAGAeAAUAAgABAAAAAGAeAAQAAgABAAAAAGAeAAAAAgABAAAAAGAeAP//AgABAAAAAGAeAP7/AgABAAAAAGAeAP3/AgABAAAAAGAfAAcAAgAAAAEAAAAfAAYAAgAAAAEAAAAfAAUAAgAAAAEAAAAgAAcAAgACAAEAAAAgAAYAAgACAAEAAAAgAAUAAgACAAEAAAAgAAQAAgACAAAAAAAfAAQAAgABAAAAAAAhAAQAAgACAAAAAAAhAAUAAgAAAAAAAFAhAAYAAgAAAAAAAFAhAAcAAgAAAAAAAFAfAAAAAgAAAAEAAAAfAP//AgAAAAEAAAAgAP//AgAAAAEAAAAgAP7/AgAAAAEAAAAgAP3/AgAAAAEAAAAhAP3/AgAAAAAAAFAhAP7/AgAAAAAAAFAhAP//AgAAAAAAAFAhAAAAAgAAAAAAAFAgAAAAAgAAAAEAAAAfAP7/AgAAAAEAAAAfAP3/AgAAAAEAAAA=")
tile_set = SubResource("TileSet_u3xhy")
navigation_visibility_mode = 1

[node name="Textbox" parent="." instance=ExtResource("10_ibf6f")]

[node name="death_screen" parent="." instance=ExtResource("22_b5o4v")]
script = ExtResource("23_p7kb4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_wbd2s")
parameters/looping = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_hul36")
parameters/looping = true

[node name="Test" type="Node2D" parent="."]
position = Vector2(3485, 244)
